--- a/README.Rmd
+++ b/README.Rmd
@@ -1,14 +1,23 @@
 ---
-title: "mega-lcwgs-pw-fst-snakeflow"
 output: github_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+<!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>"
+)
 ```
 
+# mega-lcwgs-pw-fst-snakeflow
+
+<!-- badges: start -->
+<!-- badges: end -->
+
 This is a simple Snakemake workflow for calculating pairwise Fsts (and related
-quantities, eventually, I suppose) from BAM files using ANGSD. 
+quantities, eventually, I suppose) from BAM files using ANGSD.
 
 Note that the `mega` in the name doesn't refer to anything that I think is
 "millions-esque" about this project.  It is simply one of the workflows we use in
@@ -24,4 +33,25 @@ and tells what group (population) each such sample/bam belongs to.
 **Spaces are not allowed in the bam file paths.**
 3. You need a `pwcomps.tsv` that lists the pairwise comparisons
 from the groups in `bams.tsv` that you wish to calculate pairwise
-Fsts for. 
+Fsts for.
+
+This workflow comes with a small set of data and config files for testing in the
+`.test` directory.  This is a good place to go to see examples of the `config` files,
+etc.  I print them out below here, too:
+
+**.test/config/config.yaml**
+```yaml
+`r paste(readLines(".test/config/config.yaml"), collapse = "\n")`
+```
+
+**.test/config/bams.tsv**
+```yaml
+`r paste(readLines(".test/config/bams.tsv"), collapse = "\n")`
+```
+
+**.test/config/pwcomps.tsv**
+```yaml
+`r paste(readLines(".test/config/pwcomps.tsv"), collapse = "\n")`
+```
+
+
