Tweak some resources in the sedna profile

--- a/README.Rmd
+++ b/README.Rmd
@@ -34,6 +34,10 @@ and tells what group (population) each such sample/bam belongs to.
 3. You need a `pwcomps.tsv` that lists the pairwise comparisons
 from the groups in `bams.tsv` that you wish to calculate pairwise
 Fsts for.
+4. To use `winsfs` (highly recommended because it is orders of magnitude faster
+than `realSFS`), you need to install it and make sure it is in your path (you don't
+have to do this for ANGSD, since that is available on conda).  Follow the installation
+directions at https://github.com/malthesr/winsfs#installation
 
 This workflow comes with a small set of data and config files for testing in the
 `.test` directory.  This is a good place to go to see examples of the `config` files,
